@@ -1,0 +1,139 @@
+:root {
+    --eggshell: #F2F2F2;
+    --ekho_blue: #018CCF;
+    --ekho_orange: #FDB414;
+    --ekho_gray: #4C4D4F;
+}
+
+.button {
+    background-color: var(--ekho_blue);
+    text-decoration: none;
+    color: white;
+    padding: 12px;
+    border-radius: 12px;
+    font-size: 2em;
+    z-index: 2;
+}
+
+.fullscreen-video-wrap {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.fullscreen-video-wrap video {
+    min-width: 100%;
+    min-height: 100%;
+}
+
+.header-overlay {
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: var(--eggshell);
+    z-index: 1;
+    opacity: 0.35;
+}
+
+.left {
+    float: left;
+    margin-left: 50px;
+}
+
+.links {
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.logo {
+    margin: 0 auto;
+    z-index: 2;
+}
+
+.main-container {
+    max-width: 1080px;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    margin: auto;
+    text-align: center;
+}
+
+.right {
+    float: right;
+    margin-right: 50px;
+}
+
+.video-header {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    color: var(--eggshell);
+}
+
+/* Extra Large */
+@media only screen and (min-width: 1200px) {
+
+}
+
+/* Large */
+@media only screen and (max-width: 1200px) {
+
+}
+
+/* Medium */
+@media only screen and (max-width: 992px) {
+
+}
+
+/* Small */
+@media only screen and (max-width: 768px) {
+
+    .logo img {
+        width: 100%;
+    }
+
+    .links {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .links .button {
+        margin: 15px auto;
+        width: 100%;
+    }
+
+    .right {
+        float: none;
+        margin-right: none;
+    }
+
+    .left {
+        float: none;
+        margin-left: none;
+    }
+
+}
+
+/* Extra Small */
+@media only screen and (max-width: 576px) {
+
+}
+
+/* Mobile Landscape */
+@media only screen and (max-width: 768px) and (max-height: 500px) {
+
+    .logo img {
+        width: 50%;
+    }
+
+    .links .button {
+        width: 50%;
+        font-size: 1.5rem;
+        margin: 8px auto;
+    }
+}
