@@ -1,46 +1,0 @@
-:root {
-    --eggshell: #F2F2F2;
-    --ekho_blue: #018CCF;
-    --ekho_orange: #FDB414;
-    --ekho_gray: #4C4D4F;
-}
-
-.fullscreen-video-wrap {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    overflow: hidden;
-}
-
-.fullscreen-video-wrap video {
-    min-width: 100%;
-    min-height: 100%;
-}
-
-.header-overlay {
-    height: 100vh;
-    width: 100vw;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--eggshell);
-    z-index: 1;
-    opacity: 0.5;
-}
-
-.main-container {
-    max-width: 1080px;
-    padding-left: 1rem;
-    padding-right: 1rem;
-    margin: auto;
-    text-align: center;
-}
-
-.video-header {
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    color: var(--eggshell);
-}
