@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
     <!-- Custom Styling -->
-    <link rel="stylesheet" href="css/video.css" type="text/css">
+    <link rel="stylesheet" href="css/landing.css" type="text/css">
 </head>
 
 
@@ -26,9 +26,20 @@
             <video src="vid/sky.mov" autoplay="true" loop="true"></video>
         </div>
         <div class="header-overlay"></div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="logo col-md-6 col-12">
+                    <img src="img/ekho_logo.png" alt="ekho logo">
+                </div>
+            </div>
+            <div class="row">
+                <div class="links col-md-8 col-12">
+                    <a href="" class="button left">Residential</a>
+                    <a href="" class="button right">Commercial</a>
+                </div>
+            </div>
+        </div>
     </header>
-
-
 
     <!-- Scripts -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
